QA-1948 fixed  Java version check in /bin/function.sh